--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ h4{color:rgb(40, 1, 71)}
 h1{text-align: center;}
 h3{border:solid;}
 body{
-  background-image: url("images/1438516.png");
+  background-image: url("1438516.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -47,7 +47,7 @@ img {
 <ol>
 
 <a href="http://origami.me/pigeon/">
-<img src="images/pigeon.png"  width="60"  height="60"/>
+<img src="pigeon.png"  width="60"  height="60"/>
 </a>
 <p><li><h4><i> Intresting Facts About Pigeon</i></h4></li></p>
 
@@ -61,7 +61,7 @@ img {
 <hr style="width:50% ; text-align:left ; margin-left:0">
 <br>
 <a href="http://origami.me/chameleon/">
-<img src="images/chameleon.png"  width="60"   height="60"/>
+<img src="chameleon.png"  width="60"   height="60"/>
 </a>
 <p><li><h4><i>Intresting Facts about chameleon</i></h4></li></p>
 
@@ -74,7 +74,7 @@ img {
 <hr style="width:50% ; text-align:left ; margin-left:0">
 <br>
 <a href="http://origami.me/camel/">
-<img src="images/camel.png" width="60"  height="60"/>
+<img src="camel.png" width="60"  height="60"/>
 </a>
 <p><li><h4><i>Intresting facts about Camel</i></h4></li></p>
 
@@ -87,7 +87,7 @@ img {
 <hr style="width:50% ; text-align:left ; margin-left:0">
 <br>
 <a href="http://origami.me/panda/">
-<img src="images/panda.png"  width="60"  height="60"/>
+<img src="panda.png"  width="60"  height="60"/>
 </a>
 <p><li><h4><i>Intresting facts about Panda</i></h4></li></p>
 
@@ -101,7 +101,7 @@ img {
 <hr style="width:50% ; text-align:left ; margin-left:0">
 <br>
 <a href="http://origami.me/flying-cicada/">
-<img src="images/cicada.png"  width="60"   height="60"/>
+<img src="cicada.png"  width="60"   height="60"/>
 </a>
 <p><li><h4><i>Intresting facts about Cicada</i></h4></li></p>
 
