--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ img {
 <hr style="width:50% ; text-align:left ; margin-left:0">
 <br>
 <a href="http://origami.me/teddy-bear/">
-<img src="images/teddy.png"  width="60"  height="60"/>
+<img src="teddy.png"  width="60"  height="60"/>
 </a>
 <p><li><h4><i>Intresting facts about Teddy</i></h4></li></p>
 
