--- a/followus.html
+++ b/followus.html
@@ -14,23 +14,23 @@ h2{text-align-last: center;}
   <h2> <p> Don't Forget to Follow Us on Social Media too!</p></h2>
   <hr>
   <a href="https://www.instagram.com/">
-      <img src="Icons/insta.png" width="50"  height="50"/>
+      <img src="insta.png" width="50"  height="50"/>
   </a>
 <br>
 <a href="https://www.facebook.com/">
-  <img src="Icons/fb.png" width="50"  height="50"/>
+  <img src="fb.png" width="50"  height="50"/>
 </a>
 <br>
 <a href="https://www.youtube.com/">
-  <img src="Icons/youtube.png" width="50"  height="50"/>
+  <img src="youtube.png" width="50"  height="50"/>
 </a>
 <br>
 <a href="https://in.pinterest.com/">
-  <img src="Icons/download (1).png" width="50"  height="50"/>
+  <img src="download (1).png" width="50"  height="50"/>
 </a>
 <br>
 <a href="https://www.twitter.com/">
-  <img src="Icons/download.png" width="50"  height="50"/>
+  <img src="download.png" width="50"  height="50"/>
 </a>
 
 </body>
